gcc/testsuite/gdc.test/compilable/imports/test17441foo/bar.d
module imports.test17441foo.bar;
