gcc/testsuite/gdc.test/fail_compilation/imports/fail356.d
module imports.fail356;
int bar;
